force-app/main/default/objects/Account/fields/Auto_IDO_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_IDO_Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Active Ownership</fullName>
            </value>
            <value>
                <fullName>Renewal or Upgrade</fullName>
            </value>
            <value>
                <fullName>Dormant or Lost Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>