force-app/main/default/objects/Account/fields/Auto_IDO_Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Auto_IDO_Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Household_Members</relationshipName>
    <type>Lookup</type>
</CustomField>