force-app/main/default/objects/Account/fields/AutoIDO_Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>AutoIDO_Dealer_Status__c</fullName>
    <label>Dealer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active - Steady</fullName>
            </value>
            <value>
                <fullName>Active - Premier</fullName>
            </value>
            <value>
                <fullName>Active - Flagship</fullName>
            </value>
            <value>
                <fullName>Active - Underperforming</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>