force-app/main/default/objects/Account/fields/AutoIDO_Golden_Record__c.field-meta.xml
<CustomField>
    <fullName>AutoIDO_Golden_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Golden Record</label>
    <type>Checkbox</type>
</CustomField>