force-app/main/default/objects/Account/fields/Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Discount__c</fullName>
    <label>Dealer Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>