force-app/main/default/objects/Account/recordTypes/Auto_Household.recordType-meta.xml
<RecordType>
    <fullName>Auto_Household</fullName>
    <active>true</active>
    <label>Persona</label>
</RecordType>