force-app/main/default/objects/Account/recordTypes/Auto_IDO_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Commercial</fullName>
    <active>true</active>
    <label>Auto IDO - Commercial</label>
</RecordType>