force-app/main/default/objects/Account/recordTypes/Auto_IDO_Dealer.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Dealer</fullName>
    <active>true</active>
    <label>Auto IDO - Dealer</label>
</RecordType>