force-app/main/default/objects/Account/recordTypes/Auto_IDO_Dealer_Group.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Dealer_Group</fullName>
    <active>true</active>
    <label>Auto IDO - Dealer Group</label>
</RecordType>