force-app/main/default/objects/Account/recordTypes/Auto_IDO_Household.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Household</fullName>
    <active>true</active>
    <label>Auto IDO - Household</label>
</RecordType>