force-app/main/default/objects/Account/recordTypes/Auto_IDO_Territory.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Territory</fullName>
    <active>true</active>
    <label>Auto IDO - Territory</label>
</RecordType>