force-app/main/default/objects/Account/listViews/Commercial_Accounts.listView-meta.xml
<ListView>
    <fullName>Commercial_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Auto_IDO_Commercial</value>
    </filters>
    <label>Automotive - Commercial Accounts</label>
</ListView>