force-app/main/default/objects/Account/listViews/Consumer_Accounts.listView-meta.xml
<ListView>
    <fullName>Consumer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE4</columns>
    <columns>Auto_IDO_Household_Account__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Auto_IDO_Consumer</value>
    </filters>
    <label>Automotive - Consumer Accounts</label>
</ListView>