force-app/main/default/objects/Account/listViews/Dealers.listView-meta.xml
<ListView>
    <fullName>Dealers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Area__c</columns>
    <columns>District__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Auto_IDO_Dealer</value>
    </filters>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Nord,Centro,Sud</value>
    </filters>
    <label>🚘 All - Car Dealers</label>
</ListView>