force-app/main/default/objects/Account/listViews/Golden_Records.listView-meta.xml
<ListView>
    <fullName>Golden_Records</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AutoIDO_Golden_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Golden Records</label>
</ListView>