force-app/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
    <fullName>Household_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Auto_IDO_Household</value>
    </filters>
    <label>Automotive - Household Accounts</label>
</ListView>